--- a/fly.toml
+++ b/fly.toml
@@ -1,6 +1,6 @@
-# fly.toml file generated for my-gpt-reader on 2023-03-08T15:11:38Z
+# fly.toml file generated for slackai on 2023-04-01T16:39:36+08:00
 
-app = "my-gpt-reader"
+app = "slackai"
 kill_signal = "SIGINT"
 kill_timeout = 5
 
